# jellyfin-vote

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/jellyfin_vote/: __init__.py  auth.py  config.py  jellyfin.py  media.py  results.py  routes_static.py  votes.py
static/css/: styles.css
static/js/: auth.js  login.js  myvotes.js  results.js  vote.js
templates/: login.html  myvotes.html  results.html  vote.html
tests/: conftest.py  test_auth.py  test_config.py  test_media.py  test_results.py  test_votes.py
tests/fixtures/: jellyfin_items.json
